# AndroidSurfaceImgui

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat
includes/: AImGui.h  ATouchEvent.h
modules/: AInputEventDispatcher.h  ANativeWindowCreator.h  Global.h
src/common/: AImGui.cc  ATouchEvent.cc
src/core/: main.cc
src/test-ui/: canvas.cc  main.cc  render.cc
